--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,6 +2,7 @@ footer {
     background-color: black;
     color: white;
     padding: 1rem;
+    padding-bottom: 4rem;
 
     @include respondTo(lg) {
         padding: 1rem 20rem;
