homeSection html + sass + responsive + darkmode

--- a/src/sass/components/_darkmode.scss
+++ b/src/sass/components/_darkmode.scss
@@ -53,7 +53,13 @@
         }
     }
 
-    // main {
+    main {
+        #homeSection {
+            background-color: #555;
 
-    // }
+            #homeMainContentContainer {
+                border: solid 8px black !important;
+            }
+        }
+    }
 }
