--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,14 +1,14 @@
 footer {
     background-color: black;
-    color: white;
     padding: 1rem;
     padding-bottom: 4rem;
-
+    
     @include respondTo(lg) {
         padding: 1rem 20rem;
     }
-
+    
     #footerMainContainer {
+        color: white;
         padding-bottom: 1rem;
         
         @include respondTo(lg) {
@@ -24,6 +24,7 @@ footer {
                 text-transform: uppercase;
                 margin-bottom: 1rem;
                 font-weight: bold;
+                color: #0671C4;
 
                 @include respondTo(sm) {
                     font-size: 1.15rem;
@@ -50,6 +51,7 @@ footer {
             h2 {
                 text-transform: uppercase;
                 margin-bottom: 1.5rem;
+                color: #0671C4;
 
                 @include respondTo(sm) {
                     font-size: 1.25rem;
