--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,7 +7,7 @@ header {
     z-index: 1000;
     background-color: white;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-    color: #333;
+    color: #0671C4;
     
     #headerMainContentContainer {
         padding: 1rem 1rem;
@@ -24,10 +24,6 @@ header {
                 margin-left: 4rem;
             }
 
-            #logo {
-                border: #0671C4 solid;
-            }
-    
             img {
                 width: 42px;
                 height: 42px;
@@ -40,15 +36,8 @@ header {
                 display: flex;
                 gap: 0 1rem;
                 
-                #darkModeBtn {
-                    img {
-                        background-color: #333;
-                    }
-                }    
-
                 .colorModeBtns {
                     .colorModeBtnImg {
-                        background-color: white;
                         width: 32px;
                         height: 32px;
                         transition: 0.3s;
