--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -143,22 +143,21 @@ main {
                         margin-bottom: 2rem;
                         
                         #homeCta {
-                            all: unset !important;
-                            border: solid #0671C4 2px !important;
-                            border-radius: 0.5rem !important;
-                            padding: 0.5rem !important;
-                            text-transform: uppercase !important;
-                            text-decoration: none !important;
-                            color: #0671C4 !important;
-                            display: flex !important;
-                            align-items: center !important;
-                            justify-content: center !important;
-                            gap: 0 1rem !important;
-                            width: fit-content !important;
-                            margin: 0 auto !important;
+                            border: solid #0671C4 2px;
+                            border-radius: 0.5rem;
+                            padding: 0.5rem;
+                            text-transform: uppercase;
+                            text-decoration: none;
+                            color: #0671C4;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            gap: 0 1rem;
+                            width: fit-content;
+                            margin: 0 auto;
 
                             @include respondTo(md) {
-                                margin: inherit !important;
+                                margin: inherit;
                             }
                     
                             #homeCtaImg {
@@ -426,7 +425,7 @@ main {
                     img {
                         border: #333 solid 4px ;
                         border-radius: 0.5rem;
-                        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+                        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
                         width: 75%;
 
                         @include respondTo(md) {
