contact form implementation  + sass + responsive + js validation

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -465,5 +465,10 @@ main {
 
     #contactSection {
         background-color: #eee;
+
+        #contactFormContainer {
+            margin: 0 auto;
+            border: solid 2px black;            
+        }
     }
 }
