--- a/src/sass/components/_darkmode.scss
+++ b/src/sass/components/_darkmode.scss
@@ -142,6 +142,18 @@
 
         #contactSection {
             background-color: #333;
+
+            .formTitle {
+                color: #25ad3c;
+            }
+
+            .formBtn {
+                background: #25ad3c;
+
+                &:hover {
+                    background-color: rgba(0, 0, 0, 1);
+                }
+            }
         }
 
         #map {
