--- a/src/sass/layout/_default.scss
+++ b/src/sass/layout/_default.scss
@@ -13,6 +13,6 @@ html {
     scrollbar-width: none;  /* Firefox */
     
     body {
-        font-family: 'Roboto Flex', sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
 }
