--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -97,6 +97,8 @@ footer {
         }
 
         p {
+            color: white;
+            
             a {
                 color: #0671C4;
                 text-decoration: none;
